--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>LC ventures</title>
   </head>
   <body>
+  test
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
